# flow

./: .gitignore  Cargo.toml
docs/: rust-1.95-style.md  usage.md
examples/: ingest.rs  search.rs
examples/common/: demo.rs
examples/data/: password_reset.txt
openspec/changes/rag-search-core/: design.md  proposal.md  tasks.md
openspec/changes/rag-search-core/specs/elastic-store/: spec.md
openspec/changes/rag-search-core/specs/engine-core/: spec.md
openspec/changes/rag-search-core/specs/index-builder/: spec.md
openspec/changes/rag-search-core/specs/store-core/: spec.md
scripts/: start-single-es.sh
src/: embedding.rs  error.rs  index.rs  lib.rs  query.rs  store.rs  utils.rs
src/index/: builder.rs  chunker.rs  parser.rs  types.rs
src/index/chunker/: default.rs  delimiter.rs  fixed_size.rs  pipeline.rs  semantic.rs  sliding_window.rs
src/index/parser/: qa.rs  text.rs
src/query/: default.rs  parse.rs  rrf.rs  scorer.rs  types.rs
src/store/: elastic.rs  types.rs
src/utils/: hit.rs  normalization.rs  retry.rs
