[package]
name = "rag"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
description = "Rust RAG search library with Store, IndexBuilder, and QueryEngine traits."

[lib]
name = "rag"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
elasticsearch = { version = "9.1.0-alpha.1", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
zhconv = { version = "0.4.1", default-features = false, features = ["compress", "opencc"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
